--- a/src/app/layout/layouts/student/student.component.html
+++ b/src/app/layout/layouts/student/student.component.html
@@ -3,7 +3,7 @@
   <student-header></student-header>
   <div class="flex-grow flex flex-auto w-full overflow-hidden">
     <!-- Main -->
-    <div class="flex-grow px-5 md:px-7 py-6 overflow-auto" scrollReset>
+    <div class="flex-grow p-8 overflow-auto" scrollReset>
       <router-outlet *ngIf="true"></router-outlet>
     </div>
   </div>
