--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -1,5 +1,5 @@
 <div
-  class="w-full min-h-full gap-6 flex flex-col items-center bg-gray-100 relative px-4"
+  class="w-full min-h-full gap-10 flex flex-col items-center bg-gray-100 relative px-4"
 >
   <div class="w-full max-w-7xl flex flex-col gap-6 items-center justify-start">
     <div class="flex justify-between items-center gap-4 w-full py-4 h-16">
@@ -26,10 +26,10 @@
       </div>
     </div>
     <div
-      class="w-full max-w-md md:bg-white md:px-8 md:pb-14 md:pt-10 md:rounded-md"
+      class="w-full max-w-sm"
     >
       <div class="flex flex-col gap-3 text-center">
-        <div class="font-semibold text-gray-900 text-2xl capitalize">
+        <div class="font-semibold text-gray-900 text-2xl">
           {{ "ForgotPassword.Title" | translate }}
         </div>
         <div class="text-gray-600">
