--- a/src/app/components/navigation/vertical/components/basic/basic.component.html
+++ b/src/app/components/navigation/vertical/components/basic/basic.component.html
@@ -8,7 +8,7 @@
     *ngIf="item.link && !item.externalLink && !item.function && !item.disabled"
   >
     <a
-      class="vertical-navigation-item flex justify-center items-center hover:no-underline text-current rounded-md"
+      class="vertical-navigation-item"
       [matTooltip]="item.tooltip || ''"
       [matTooltipPosition]="'right'"
       [routerLink]="[item.link]"
@@ -24,7 +24,7 @@
     *ngIf="item.link && item.externalLink && !item.function && !item.disabled"
   >
     <a
-      class="vertical-navigation-item flex justify-center items-center hover:no-underline text-current rounded-md"
+      class="vertical-navigation-item"
       [matTooltip]="item.tooltip || ''"
       [matTooltipPosition]="'right'"
       [href]="item.link"
@@ -51,7 +51,7 @@
     *ngIf="item.link && !item.externalLink && item.function && !item.disabled"
   >
     <a
-      class="vertical-navigation-item flex justify-center items-center hover:no-underline text-current rounded-md"
+      class="vertical-navigation-item"
       [matTooltip]="item.tooltip || ''"
       [matTooltipPosition]="'right'"
       [routerLink]="[item.link]"
@@ -68,7 +68,7 @@
     *ngIf="item.link && item.externalLink && item.function && !item.disabled"
   >
     <a
-      class="vertical-navigation-item flex justify-center items-center hover:no-underline text-current rounded-md"
+      class="vertical-navigation-item"
       [matTooltip]="item.tooltip || ''"
       [matTooltipPosition]="'right'"
       [href]="item.link"
@@ -82,7 +82,7 @@
   <!-- Item with a no link and no function -->
   <ng-container *ngIf="!item.link && !item.function && !item.disabled">
     <div
-      class="vertical-navigation-item flex items-center hover:no-underline text-current rounded-md"
+      class="vertical-navigation-item"
       [matTooltip]="item.tooltip || ''"
       [matTooltipPosition]="'right'"
     >
@@ -93,7 +93,7 @@
   <!-- Item is disabled -->
   <ng-container *ngIf="item.disabled">
     <div
-      class="vertical-navigation-item flex items-center hover:no-underline text-current rounded-md vertical-navigation-item--disabled"
+      class="vertical-navigation-item vertical-navigation-item--disabled"
       [matTooltip]="item.tooltip || ''"
       [matTooltipPosition]="'right'"
     >
@@ -115,14 +115,9 @@
   </ng-container>
 
   <!-- Title & Subtitle -->
-  <div
-    class="vertical-navigation-item-title__wrapper flex-grow overflow-hidden"
-  >
+  <div class="vertical-navigation-item-title__wrapper">
     <div class="vertical-navigation-item__title">
-      <span
-        [ngClass]="item.classes?.title"
-        class="block overflow-hidden whitespace-nowrap overflow-ellipsis"
-      >
+      <span [ngClass]="item.classes?.title">
         {{ item.title }}
       </span>
     </div>
@@ -137,9 +132,9 @@
 
   <!-- Badge -->
   <ng-container *ngIf="item.badge">
-    <div class="vertical-navigation-item__badge ml-auto">
+    <div class="vertical-navigation-item__badge">
       <div
-        class="vertical-navigation-item-badge__content px-2 h-5 rounded-lg bg-red-500 text-white font-medium text-xs flex justify-center items-center"
+        class="vertical-navigation-item-badge__content"
         [ngClass]="item.badge.classes"
       >
         {{ item.badge.title }}
