--- a/src/app/components/navigation/vertical/components/collapsable/collapsable.component.html
+++ b/src/app/components/navigation/vertical/components/collapsable/collapsable.component.html
@@ -3,7 +3,7 @@
   [ngClass]="item.classes?.wrapper"
 >
   <div
-    class="vertical-navigation-item flex items-center text-current rounded-md"
+    class="vertical-navigation-item"
     [ngClass]="{ 'vertical-navigation-item--disabled': item.disabled }"
     [matTooltip]="item.tooltip || ''"
     [matTooltipPosition]="'right'"
@@ -20,14 +20,9 @@
     </ng-container>
 
     <!-- Title & Subtitle -->
-    <div
-      class="vertical-navigation-item-title__wrapper flex-grow overflow-hidden"
-    >
+    <div class="vertical-navigation-item-title__wrapper">
       <div class="vertical-navigation-item__title">
-        <span
-          [ngClass]="item.classes?.title"
-          class="block whitespace-nowrap overflow-ellipsis overflow-hidden"
-        >
+        <span [ngClass]="item.classes?.title">
           {{ item.title }}
         </span>
       </div>
@@ -42,9 +37,9 @@
 
     <!-- Badge -->
     <ng-container *ngIf="item.badge">
-      <div class="vertical-navigation-item__badge ml-auto">
+      <div class="vertical-navigation-item__badge">
         <div
-          class="vertical-navigation-item-badge__content px-2 h-5 rounded-lg bg-red-500 text-white font-medium text-xs flex justify-center items-center"
+          class="vertical-navigation-item-badge__content"
           [ngClass]="item.badge.classes"
         >
           {{ item.badge.title }}
@@ -53,7 +48,7 @@
     </ng-container>
 
     <!-- Arrow -->
-    <div class="vertical-navigation-item__arrow flex items-center">
+    <div class="vertical-navigation-item__arrow">
       <mat-icon [svgIcon]="'mat_outline:chevron_left'"></mat-icon>
     </div>
   </div>
