--- a/src/app/components/navigation/vertical/components/divider/divider.component.html
+++ b/src/app/components/navigation/vertical/components/divider/divider.component.html
@@ -1,5 +1,5 @@
 <!-- Divider -->
 <div
-  class="vertical-navigation-item__wrapper my-3 border-0 border-b border-solid dark:border-none border-light"
+  class="vertical-navigation-item__wrapper"
   [ngClass]="item.classes?.wrapper"
 ></div>
