--- a/src/app/components/navigation/vertical/styles/_thin.scss
+++ b/src/app/components/navigation/vertical/styles/_thin.scss
@@ -1,19 +1,21 @@
 /* Variables */
-$vertical-navigation-thin-width: 80;
+:root {
+  --vertical-navigation-thin-width: 80px;
+}
 
 vertical-navigation {
   /* Thin appearance overrides */
   &.vertical-navigation--appearance-thin .vertical-navigation__wrapper {
-    width: #{$vertical-navigation-thin-width}px;
-    min-width: #{$vertical-navigation-thin-width}px;
-    max-width: #{$vertical-navigation-thin-width}px;
+    width: var(--vertical-navigation-thin-width);
+    min-width: var(--vertical-navigation-thin-width);
+    max-width: var(--vertical-navigation-thin-width);
   }
 
   &.vertical-navigation--appearance-thin {
     /* Left positioned */
     &.vertical-navigation--position-left {
       &.vertical-navigation--mode-side {
-        margin-left: -#{$vertical-navigation-thin-width}px;
+        margin-left: calc(var(--vertical-navigation-thin-width) * -1);
       }
 
       &.vertical-navigation--opened {
@@ -24,7 +26,7 @@ vertical-navigation {
     /* Right positioned */
     &.vertical-navigation--position-right {
       &.vertical-navigation--mode-side {
-        margin-right: -#{$vertical-navigation-thin-width}px;
+        margin-right: calc(var(--vertical-navigation-thin-width) * -1);
       }
 
       &.vertical-navigation--opened {
@@ -33,7 +35,7 @@ vertical-navigation {
 
       .vertical-navigation-aside__wrapper {
         left: auto;
-        right: #{$vertical-navigation-thin-width}px;
+        right: var(--vertical-navigation-thin-width);
       }
     }
 
@@ -109,7 +111,7 @@ vertical-navigation {
 
     /* Aside wrapper */
     .vertical-navigation-aside__wrapper {
-      left: #{$vertical-navigation-thin-width}px;
+      left: var(--vertical-navigation-thin-width);
     }
   }
 }
