--- a/src/app/layout/components/user/user.component.html
+++ b/src/app/layout/components/user/user.component.html
@@ -1,4 +1,4 @@
-<button mat-button class="!rounded-full btn--lg" type="button" [matMenuTriggerFor]="userMenu">
+<button mat-button class="!rounded-full" type="button" [matMenuTriggerFor]="userMenu">
   <div class="flex flex-col">
     <!-- <img
       class="w-8 h-8 rounded-full overflow-hidden"
