--- a/src/app/modules/client/onboarding/account-type/account-type.component.html
+++ b/src/app/modules/client/onboarding/account-type/account-type.component.html
@@ -1,10 +1,12 @@
 <div
-  class="w-full min-h-full flex flex-col gap-6 items-center bg-gray-50 relative pb-20 px-4"
+  class="w-full min-h-full flex flex-col gap-6 items-center bg-gray-100 relative pb-20 px-4"
 >
   <div class="w-full max-w-7xl flex flex-col gap-6 items-center justify-start">
     <div class="flex justify-between items-center gap-4 w-full py-4 h-16">
       <div class="flex items-center gap-2">
-        <div class="font-semibold text-gray-900 text-xl cursor-pointer">Vietspeak</div>
+        <div class="font-semibold text-gray-900 text-xl cursor-pointer">
+          Vietspeak
+        </div>
         <languages></languages>
       </div>
 
@@ -14,9 +16,7 @@
     </div>
 
     <div class="w-full max-w-md">
-      <div
-        class="font-semibold text-gray-900 text-2xl text-center mb-10 capitalize"
-      >
+      <div class="font-semibold text-gray-900 text-2xl text-center mb-10">
         {{ "SelectAccountType.Title" | translate }}
       </div>
 
@@ -27,8 +27,12 @@
           (click)="onSelectAccountType(type)"
         >
           <div
-            class="border-4 rounded-md w-48 h-48 flex justify-center items-center bg-white"
-            [ngClass]="selectedAccountType === type ? 'border-primary' : ''"
+            class="shadow rounded-md w-48 h-48 flex justify-center items-center bg-white shadow-sm"
+            [ngClass]="
+              selectedAccountType === type
+                ? 'border-primary border-4'
+                : 'border-gray-300 border-2 '
+            "
           >
             <mat-icon
               class="icon-size-18"
