--- a/src/app/modules/client/onboarding/congratulations/congratulations.component.html
+++ b/src/app/modules/client/onboarding/congratulations/congratulations.component.html
@@ -1,8 +1,8 @@
 <div
-  class="w-full min-h-full flex flex-col gap-6 items-center bg-gray-50 relative px-4 justify-center"
+  class="w-full min-h-full flex flex-col gap-10 items-center bg-gray-100 relative px-4 justify-center"
 >
   <div
-    class="w-full max-w-sm md:bg-white md:px-8 md:py-14 md:rounded-md"
+    class="w-full max-w-sm"
   >
     <div class="flex flex-col gap-3 justify-center items-center">
       <mat-icon
@@ -11,7 +11,7 @@
       ></mat-icon>
       <div class="font-semibold text-2xl text-gray-900">Congratulations!</div>
       <div class="text-gray-500 text-lg">Your account is now ready</div>
-      <button class="w-full !mt-6 btn--lg" mat-flat-button [color]="'primary'">
+      <button class="w-full !mt-6 btn--lg" mat-flat-button [color]="'primary'" routerLink="/">
         {{ "Actions.Continue" | translate }}
       </button>
     </div>
