--- a/src/app/modules/client/onboarding/student-info/student-info.component.html
+++ b/src/app/modules/client/onboarding/student-info/student-info.component.html
@@ -1,5 +1,5 @@
 <div
-  class="w-full min-h-full flex flex-col gap-6 items-center bg-gray-50 relative px-4 pb-20"
+  class="w-full min-h-full flex flex-col gap-6 items-center bg-gray-100 relative px-4 pb-20"
 >
   <div class="w-full max-w-7xl flex flex-col gap-6 items-center justify-start">
     <div class="flex justify-between items-center gap-4 w-full py-4 h-16">
@@ -28,7 +28,7 @@
     </div>
 
     <div class="w-full max-w-xl sm:px-6">
-      <div class="font-semibold text-gray-900 text-2xl text-center capitalize">
+      <div class="font-semibold text-gray-900 text-2xl text-center">
         {{ "StudentInfo.Title" | translate }}
       </div>
       <form class="mt-8" [formGroup]="studentInfoForm" (ngSubmit)="submit()">
@@ -86,7 +86,7 @@
           >
         </mat-form-field>
         <mat-form-field appearance="fill" class="w-full">
-          <mat-label>{{ "StudentInfo.CurrentLevel" | translate }}</mat-label>
+          <mat-label>{{ "StudentInfo.Level" | translate }}</mat-label>
           <mat-select
             formControlName="currentLevel"
             placeholder="{{ 'Actions.Select' | translate }}"
