--- a/src/app/modules/client/onboarding/tutor-info/tutor-info.component.html
+++ b/src/app/modules/client/onboarding/tutor-info/tutor-info.component.html
@@ -1,5 +1,5 @@
 <div
-  class="w-full min-h-full flex flex-col gap-6 items-center bg-gray-50 relative pb-20 px-4"
+  class="w-full min-h-full flex flex-col gap-6 items-center bg-gray-100 relative pb-20 px-4"
 >
   <div class="w-full max-w-7xl flex flex-col gap-6 items-center justify-start">
     <div class="flex justify-between items-center gap-4 w-full py-4 h-16">
@@ -28,9 +28,7 @@
     </div>
 
     <div class="w-full max-w-xl">
-      <div
-        class="font-semibold text-gray-900 text-2xl text-center mb-4 capitalize"
-      >
+      <div class="font-semibold text-gray-900 text-2xl text-center mb-4">
         {{ "TutorInfo.Title" | translate }}
       </div>
 
@@ -266,9 +264,7 @@
                     >
                   </mat-form-field>
                   <div class="flex flex-col mb-4">
-                    <div
-                      class="text-gray-500 font-medium flex gap-1 items-center mb-2"
-                    >
+                    <div class="text-gray-500 flex gap-1 items-center mb-2">
                       {{ "TutorInfo.LanguagesYouSpeak" | translate }}
                     </div>
                     <div formArrayName="languages" class="flex flex-col gap-3">
@@ -277,7 +273,7 @@
                           let language of languagesFormArray.controls;
                           let i = index
                         "
-                        class="flex items-center flex-wrap md:flex-nowrap gap-x-3 rounded border-2 border-solid px-3 py-2 bg-white relative"
+                        class="flex items-center flex-wrap md:flex-nowrap gap-x-3 rounded border border-gray-300 border-solid px-3 py-2 bg-white relative shadow-sm"
                         [formGroupName]="i"
                       >
                         <div class="flex-grow">
@@ -352,7 +348,6 @@
                           <button
                             mat-icon-button
                             type="button"
-                            class="btn btn--sm"
                             (click)="removeLanguage(i)"
                           >
                             <mat-icon
@@ -372,9 +367,7 @@
                   </div>
 
                   <div class="flex flex-col mb-4">
-                    <div
-                      class="text-gray-500 font-medium flex gap-1 items-center mb-2"
-                    >
+                    <div class="text-gray-500 flex gap-1 items-center mb-2">
                       {{ "TutorInfo.TeachingCertificates" | translate }}
                       <span class="text-danger">*</span>
                       <span class="text-gray-400 font-normal text-sm"
@@ -386,7 +379,7 @@
                     </div>
                     <div class="flex flex-col">
                       <div
-                        class="rounded border-2 border-dashed bg-white border-gray-300 p-6 flex flex-col gap-2 items-center justify-center relative"
+                        class="rounded border border-solid bg-white border-gray-300 p-6 flex flex-col gap-2 items-center justify-center relative shadow-sm"
                         [ngClass]="
                           isOnDropFilesContainer
                             ? '!border-primary !bg-gray-50'
@@ -432,7 +425,7 @@
                         "
                       >
                         <div
-                          class="bg-white rounded flex gap-4 items-center px-3 py-2 border-2"
+                          class="bg-white rounded flex gap-4 items-center px-3 py-2 border-2 shadow-sm"
                           *ngFor="
                             let file of this.tutorExperienceForm.get(
                               'teachingCertificates'
@@ -442,7 +435,7 @@
                         >
                           <div class="flex flex-col gap-1 overflow-hidden">
                             <div
-                              class="text-gray-600 font-medium overflow-hidden text-ellipsis whitespace-nowrap"
+                              class="text-gray-600 overflow-hidden text-ellipsis whitespace-nowrap"
                             >
                               {{ file.name }}
                             </div>
@@ -467,7 +460,7 @@
                       </div>
                     </div>
                     <div
-                      class="font-medium text-xs text-danger mt-2"
+                      class="text-xs text-danger mt-2"
                       *ngIf="
                         this.tutorExperienceForm
                           .get('teachingCertificates')
@@ -482,7 +475,7 @@
                     </div>
                   </div>
                   <div class="flex flex-col gap-2">
-                    <div class="text-gray-500 font-medium">
+                    <div class="text-gray-500">
                       {{ "TutorInfo.HaveExperienceTeachingOnline" | translate }}
                     </div>
                     <mat-radio-group
@@ -499,7 +492,7 @@
                   </div>
                   <div class="mt-10 flex justify-between gap-4">
                     <button
-                      class="btn btn--lg"
+                      class="btn--lg !px-6"
                       mat-stroked-button
                       matStepperPrevious
                     >
@@ -507,7 +500,7 @@
                     </button>
                     <button
                       type="submit"
-                      class="btn btn--lg !px-6"
+                      class="btn--lg !px-6"
                       mat-flat-button
                       [color]="'primary'"
                       (click)="submitTutorExperienceForm()"
@@ -529,9 +522,7 @@
               <div class="w-full mt-4">
                 <form [formGroup]="tutorAdditionalInfoForm">
                   <div class="flex flex-col gap-2 mb-4">
-                    <div
-                      class="text-gray-500 font-medium flex gap-1 items-center"
-                    >
+                    <div class="text-gray-500 flex gap-1 items-center">
                       {{ "TutorInfo.ProfilePicture" | translate }}
                       <span class="text-gray-400 font-normal text-sm"
                         >({{
@@ -542,7 +533,7 @@
                       >
                     </div>
                     <div
-                      class="rounded border-2 border-dashed bg-white border-gray-300 p-6 flex flex-col items-center justify-center"
+                      class="rounded border border-solid bg-white border-gray-300 p-6 flex flex-col items-center justify-center shadow-sm"
                     >
                       <div class="flex flex-col gap-6 items-center">
                         <div class="w-24 h-24 relative">
@@ -715,7 +706,7 @@
 
                   <div class="mt-4 flex justify-between gap-4">
                     <button
-                      class="btn btn--lg"
+                      class="btn--lg !px-6"
                       mat-stroked-button
                       matStepperPrevious
                     >
@@ -723,7 +714,7 @@
                     </button>
                     <button
                       type="submit"
-                      class="btn btn--lg !px-6"
+                      class="btn--lg !px-6"
                       mat-flat-button
                       [color]="'primary'"
                       [disabled]="tutorAdditionalInfoForm.disabled"
