--- a/src/styles/scss/components/_dialog.scss
+++ b/src/styles/scss/components/_dialog.scss
@@ -24,19 +24,12 @@
     padding: 16px 16px 0 0;
   }
 
-  &__back {
-    position: absolute;
-    left: 0;
-    top: 0;
-    padding: 16px 0 0 16px;
-  }
-
   &__header {
-    padding: 16px 24px;
+    padding: 24px 64px 16px 24px;
   }
 
   &__body {
-    max-height: calc(100vh - 150px);
+    max-height: calc(100vh - 200px);
     padding: 0 24px;
     overflow: auto;
   }
