update something new

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -26,9 +26,7 @@
         </button>
       </div>
     </div>
-    <div
-      class="w-full max-w-sm"
-    >
+    <div class="w-full max-w-sm">
       <div class="font-semibold text-gray-900 text-2xl text-center">
         {{ "Login.Title" | translate }}
       </div>
