--- a/src/app/auth/password-reset/password-reset.component.html
+++ b/src/app/auth/password-reset/password-reset.component.html
@@ -12,9 +12,7 @@
         <languages></languages>
       </div>
     </div>
-    <div
-      class="w-full max-w-sm"
-    >
+    <div class="w-full max-w-sm">
       <ng-container *ngIf="!isChanged">
         <div class="flex flex-col gap-3 text-center">
           <div class="font-semibold text-gray-900 text-2xl">
