--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -25,12 +25,8 @@
         </button>
       </div>
     </div>
-    <div
-      class="w-full max-w-sm"
-    >
-      <div
-        class="font-semibold text-gray-900 text-2xl mb-2 text-center"
-      >
+    <div class="w-full max-w-sm">
+      <div class="font-semibold text-gray-900 text-2xl mb-2 text-center">
         {{ "Register.Title" | translate }}
       </div>
 
