--- a/src/app/layout/layouts/student/components/header/header.component.html
+++ b/src/app/layout/layouts/student/components/header/header.component.html
@@ -1,16 +1,16 @@
 <div
-  class="bg-white border-0 border-b border-solid border-light flex px-6 h-16"
+  class="bg-white flex px-6 h-14 shadow"
 >
   <div class="flex justify-center items-center gap-2">
     <a
       class="font-semibold text-gray-900 text-lg hover:no-underline cursor-pointer select-none"
-      routerLink="/admin/home"
+      routerLink="/student/home"
       >Vietspeak</a
     >
-    <languages></languages>
   </div>
 
-  <div class="ml-auto flex items-center gap-4">
+  <div class="ml-auto flex items-center gap-2">
+    <languages></languages>
     <user></user>
   </div>
 </div>
