--- a/src/app/layout/layouts/tutor/tutor.component.html
+++ b/src/app/layout/layouts/tutor/tutor.component.html
@@ -1,4 +1,6 @@
-<div class="w-full h-full overflow-hidden flex flex-col relative bg-gray-50">
+<div
+  class="w-full h-full overflow-hidden flex flex-col relative bg-gray-100"
+>
   <!-- Header -->
   <tutor-header></tutor-header>
   <div class="flex-grow flex flex-auto w-full overflow-hidden">
