--- a/src/app/modules/client/onboarding/congratulations/congratulations.component.html
+++ b/src/app/modules/client/onboarding/congratulations/congratulations.component.html
@@ -2,7 +2,7 @@
   class="w-full min-h-full flex flex-col gap-10 items-center bg-gray-100 relative px-4 justify-center"
 >
   <div
-    class="w-full max-w-sm"
+    class="w-full max-w-md sm:bg-white sm:p-14 rounded-md sm:border border-solid border-gray-300 sm:shadow-sm"
   >
     <div class="flex flex-col gap-3 justify-center items-center">
       <mat-icon
@@ -11,7 +11,12 @@
       ></mat-icon>
       <div class="font-semibold text-2xl text-gray-900">Congratulations!</div>
       <div class="text-gray-500 text-lg">Your account is now ready</div>
-      <button class="w-full !mt-6 btn--lg" mat-flat-button [color]="'primary'" routerLink="/">
+      <button
+        class="w-full !mt-6 btn--lg"
+        mat-flat-button
+        [color]="'primary'"
+        routerLink="/"
+      >
         {{ "Actions.Continue" | translate }}
       </button>
     </div>
