--- a/src/app/modules/client/onboarding/student-info/student-info.component.html
+++ b/src/app/modules/client/onboarding/student-info/student-info.component.html
@@ -105,7 +105,12 @@
         </mat-form-field>
         <mat-form-field appearance="fill" class="w-full">
           <mat-label>{{ "StudentInfo.FirstName" | translate }}</mat-label>
-          <input matInput formControlName="firstName" appPreventAutoFill #firstName />
+          <input
+            matInput
+            formControlName="firstName"
+            appPreventAutoFill
+            #firstName
+          />
           <button
             mat-icon-button
             type="button"
@@ -125,7 +130,12 @@
         </mat-form-field>
         <mat-form-field appearance="fill" class="w-full">
           <mat-label>{{ "StudentInfo.LastName" | translate }}</mat-label>
-          <input matInput formControlName="lastName" appPreventAutoFill #lastName />
+          <input
+            matInput
+            formControlName="lastName"
+            appPreventAutoFill
+            #lastName
+          />
           <button
             mat-icon-button
             type="button"
