--- a/src/app/layout/layouts/admin/components/header/header.component.html
+++ b/src/app/layout/layouts/admin/components/header/header.component.html
@@ -1,5 +1,5 @@
 <div
-  class="bg-white border-0 border-b border-solid border-light flex px-2 md:px-4 h-14"
+  class="bg-white text-gray-900 border-0 border-b border-solid border-gray-200 flex px-2 md:px-4 h-14"
 >
   <div class="flex justify-center items-center gap-1">
     <div class="block md:hidden">
@@ -9,12 +9,12 @@
         (click)="toggleNavigation()"
         class=""
       >
-        <mat-icon svgIcon="mat_outline:menu" class="icon-size-6"></mat-icon>
+        <mat-icon svgIcon="mat_outline:menu" class="icon-size-6 text-current"></mat-icon>
       </button>
     </div>
 
     <a
-      class="font-semibold text-gray-900 text-lg hover:no-underline cursor-pointer select-none"
+      class="font-semibold text-current text-lg hover:no-underline cursor-pointer select-none"
       routerLink="admin"
       >Vietspeak</a
     >
