--- a/src/app/modules/client/onboarding/student-info/student-info.component.html
+++ b/src/app/modules/client/onboarding/student-info/student-info.component.html
@@ -175,7 +175,7 @@
         <div class="mt-4 flex justify-center">
           <button
             type="submit"
-            class="btn btn--lg w-full"
+            class="btn--lg w-full"
             mat-flat-button
             [color]="'primary'"
             [disabled]="studentInfoForm.disabled"
