--- a/src/app/modules/common/change-password/change-password.component.html
+++ b/src/app/modules/common/change-password/change-password.component.html
@@ -1,10 +1,10 @@
 <div class="w-full h-full flex flex-col max-w-md">
-  <div class="font-semibold text-gray-900 text-xl mb-4">
+  <div class="font-semibold text-gray-900 text-xl mb-3">
     {{ "ChangePassword.Title" | translate }}
   </div>
 
   <form [formGroup]="changePasswordForm" (ngSubmit)="submit()" class="flex flex-col">
-    <mat-form-field appearance="fill" class="w-full">
+    <mat-form-field appearance="fill" class="w-full mat-form-field--sm">
       <mat-label>{{ "ChangePassword.CurrentPassword" | translate }}</mat-label>
       <input
         matInput
@@ -39,7 +39,7 @@
         {{ "Errors.Required" | translate }}
       </mat-error>
     </mat-form-field>
-    <mat-form-field appearance="fill" class="w-full">
+    <mat-form-field appearance="fill" class="w-full mat-form-field--sm">
       <mat-label>{{ "ChangePassword.NewPassword" | translate }}</mat-label>
       <input
         matInput
@@ -86,7 +86,7 @@
         }}
       </mat-error>
     </mat-form-field>
-    <mat-form-field appearance="fill" class="w-full">
+    <mat-form-field appearance="fill" class="w-full mat-form-field--sm">
       <mat-label>{{
         "ChangePassword.ConfirmNewPassword" | translate
       }}</mat-label>
@@ -140,7 +140,7 @@
         }}
       </mat-error>
     </mat-form-field>
-    <div class="mt-4 flex justify-center">
+    <div class="flex justify-center">
       <button
         type="submit"
         class="btn--lg w-full"
