--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -2,7 +2,7 @@
   class="w-full min-h-full flex flex-col gap-10 items-center bg-gray-100 relative px-4"
 >
   <div class="w-full max-w-7xl flex flex-col gap-6 items-center justify-start">
-    <div class="flex justify-between items-center gap-4 w-full py-4 h-16">
+    <div class="flex justify-between items-center gap-4 w-full py-4">
       <div class="flex items-center gap-2">
         <a
           class="font-semibold text-gray-900 text-xl hover:no-underline cursor-pointer select-none"
@@ -16,7 +16,7 @@
           {{ "Register.AlreadyHaveAccount" | translate }}?
         </div>
         <button
-          class="btn--sm flex-shrink-0"
+          class="flex-shrink-0"
           mat-flat-button
           [color]="'primary'"
           routerLink="/login"
