--- a/src/app/layout/components/user/user.component.html
+++ b/src/app/layout/components/user/user.component.html
@@ -13,16 +13,16 @@
     />
     <div
       *ngIf="!currentUser?.avatarUrl"
-      class="w-8 h-8 rounded-full overflow-hidden flex justify-center items-center font-medium bg-accent text-white uppercase"
+      class="w-8 h-8 rounded-full overflow-hidden flex justify-center items-center font-medium bg-primary text-white uppercase"
     >
       {{ currentUser?.fullName?.charAt(0) || 'H' }}
     </div>
   </div>
-  <div *ngIf="currentUser?.fullName" class="ml-2 font-medium text-sm max-w">
+  <div *ngIf="currentUser?.fullName" class="ml-2 font-medium text-sm max-w text-current">
     {{ currentUser?.fullName }}
   </div>
   <div class="ml-2 flex items-center">
-    <mat-icon svgIcon="mat_outline:expand_more" class="icon-size-5"></mat-icon>
+    <mat-icon svgIcon="mat_outline:expand_more" class="icon-size-5 text-current"></mat-icon>
   </div>
 </button>
 
