--- a/src/app/layout/layouts/student/components/header/header.component.html
+++ b/src/app/layout/layouts/student/components/header/header.component.html
@@ -1,5 +1,5 @@
 <div
-  class="bg-white flex px-6 h-14 shadow"
+  class="bg-white border-0 border-b border-solid border-gray-200 flex px-6 h-14 shadow"
 >
   <div class="flex justify-center items-center gap-2">
     <a
