--- a/src/app/layout/layouts/tutor/tutor.component.html
+++ b/src/app/layout/layouts/tutor/tutor.component.html
@@ -5,7 +5,7 @@
   <tutor-header></tutor-header>
   <div class="flex-grow flex flex-auto w-full overflow-hidden">
     <!-- Main -->
-    <div class="flex-grow p-8 overflow-auto" scrollReset>
+    <div class="flex-grow p-6 pb-10 overflow-auto" scrollReset>
       <router-outlet *ngIf="true"></router-outlet>
     </div>
   </div>
