--- a/src/app/modules/admin/tutors/tutor-detail/tutor-detail.component.html
+++ b/src/app/modules/admin/tutors/tutor-detail/tutor-detail.component.html
@@ -1,8 +1,8 @@
 <div class="flex flex-col w-full max-w-6xl mx-auto gap-4 overflow-hidden">
   <div class="font-semibold text-gray-900 text-2xl">
-    {{ "Settings.Title" | translate }}
+    {{ "Tutor info" | translate }}
   </div>
-  <div class="flex-grow flex-wrap flex gap-8">
+  <div class="flex-grow flex-wrap md:flex-nowrap flex gap-8">
     <div class="flex flex-col w-64 flex-shrink-0">
       <a
         class="flex items-center gap-3 hover:no-underline px-3 py-2 rounded text-gray-500 cursor-pointer hover:bg-gray-200"
