--- a/src/app/modules/admin/tutors/tutors.component.html
+++ b/src/app/modules/admin/tutors/tutors.component.html
@@ -1,1 +1,123 @@
-<p>tutors works!</p>
+<div class="w-full mx-auto min-h-full flex flex-col max-w-6xl">
+  <div class="font-semibold text-gray-900 text-2xl mb-3">
+    {{ "Tutors" }}
+  </div>
+  <mat-form-field
+    class="w-full sm:w-96 mat-form-field--sm"
+    appearance="fill"
+    [floatLabel]="'always'"
+    [ngClass]=""
+  >
+    <input
+      matInput
+      type="text"
+      placeholder="Find by name or email"
+      name="search"
+      [formControl]="searchInput"
+      #search
+    />
+    <button matPrefix type="button">
+      <mat-icon [svgIcon]="'mat_outline:search'"> </mat-icon>
+    </button>
+    <button
+      matSuffix
+      mat-icon-button
+      type="button"
+      *ngIf="search.value !== ''"
+      (click)="searchInput.setValue('')"
+    >
+      <mat-icon class="icon-size-5" [svgIcon]="'mat_outline:close'"> </mat-icon>
+    </button>
+  </mat-form-field>
+  <div class="flex-grow">
+    <table
+      mat-table
+      [dataSource]="dataSource"
+      class="w-full border border-solid border-gray-200 rounded"
+      matSort
+    >
+      <ng-container matColumnDef="photo">
+        <th mat-header-cell *matHeaderCellDef>Photo</th>
+        <td mat-cell *matCellDef="let element; let i = index">
+          <div>
+            <img
+              *ngIf="element?.avatarUrl"
+              class="w-9 h-9 rounded-full overflow-hidden"
+              [src]="element?.avatarUrl"
+              alt=""
+            />
+            <div
+              *ngIf="!element?.avatarUrl"
+              class="w-9 h-9 rounded-full overflow-hidden flex justify-center items-center font-medium bg-primary text-white uppercase"
+            >
+              {{ element?.firstName?.charAt(0) || "H" }}
+            </div>
+          </div>
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef>Name</th>
+        <td mat-cell *matCellDef="let element; let i = index"></td>
+      </ng-container>
+
+      <ng-container matColumnDef="email">
+        <th mat-header-cell *matHeaderCellDef>Email</th>
+        <td mat-cell *matCellDef="let element; let i = index"></td>
+      </ng-container>
+
+      <ng-container matColumnDef="status">
+        <th mat-header-cell *matHeaderCellDef class="w-40">Status</th>
+        <td mat-cell *matCellDef="let element; let i = index">
+          <div class="tag tag--danger">Inactive</div>
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="action" stickyEnd>
+        <th mat-header-cell *matHeaderCellDef class="w-40">Action</th>
+        <td mat-cell *matCellDef="let element; let i = index">
+          <div class="flex gap-3">
+            <button mat-button color="primary" class="btn--sm btn--soft" routerLink="1">
+              Edit
+            </button>
+            <button
+              mat-button
+              color="accent"
+              class="btn--sm btn--soft"
+              (click)="delete(element)"
+            >
+              Delete
+            </button>
+          </div>
+        </td>
+      </ng-container>
+
+      <tr
+        mat-header-row
+        *matHeaderRowDef="displayedColumns; sticky: false"
+      ></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      <tr class="mat-row" *matNoDataRow>
+        <td
+          class="mat-cell text-center"
+          [attr.colspan]="displayedColumns.length"
+        >
+          No data
+        </td>
+      </tr>
+    </table>
+  </div>
+  <ng-container
+    *ngFor="let item of dataSource.data | paginate : paginationConfig"
+  ></ng-container>
+  <div class="mt-6 flex gap-4 items-center justify-between">
+    <div class="text-gray-500 text-sm">
+      {{ "1" }} to {{ "11" }} of {{ "65" }} records
+    </div>
+    <pagination-controls
+      (pageChange)="onPageChanged($event)"
+      previousLabel=""
+      nextLabel=""
+    ></pagination-controls>
+  </div>
+</div>
