--- a/src/app/modules/client/student/home/home.component.html
+++ b/src/app/modules/client/student/home/home.component.html
@@ -1,1 +1,8 @@
-<p>home works!</p>
+<div class="w-full max-w-6xl mx-auto">
+  <div class="font-semibold text-gray-900 text-2xl">
+    {{
+      "Home.Welcome"
+        | translate : { name: userService.currentUserValue?.fullName }
+    }}
+  </div>
+</div>
