--- a/src/styles/scss/components/__components-dir.scss
+++ b/src/styles/scss/components/__components-dir.scss
@@ -5,5 +5,4 @@ This file is used to contain all components imports.
 
 @import "./buttons";
 @import "./dialog";
-@import "./tables";
-@import "./dropdown";
+@import "./tags";
